2011-11-x
Better ngram feature computation by pre-transforming into word-id
New: added softmax-margin and loss-margin in cicaa_learn_kbest{,_mpi} (probably, we will deprecate cicada_maxlike{,mpi})

2011-10-29
New: Better ngram state handling, inspired by Sorensen and Allauzen (2011) and Pauls and Klein (2011)
Serious bugfix for ngram access: we may hit ngrams which do not exist (very rare, though)
Added "project" option to project non-terminal symbols in GHKM algorithm

2011-10-27
Better feature application: completely removed "estimates." Now, we should encode estiamted score in each hypothesis.

2011-10-26
Support posterior matrix dumping in cicada_lexicon_{model1,hmm}
Support MST dependency in cicada_lexicon_{model1,hmm}
Support for aligner script: cicada-alignment.py will generate aligner.sh so that you can align arbitrary data, or dump posterior matrix
Support alignment combination from posteriors in two directions
Better caching for ngram language model feature: cache only for higher order + longer phrases
Warn CKY-style indexing in tree-grammars

2011-10-17
Added softmax-margin to cicada_learn_block
Added pegasos and optimized-pegasos to cicada_learn_block

2011-10-13
New: Support moses training using the cicada tools (cicada-learn-moses.sh): learn by LBFGS or liblinear with kbests
New: parse variant of phrasal composition: we do forward lazy graph constructin + backward filtering (but very slow at this moment)
New: Better online learning by computing oracles in block-wise fashion.
Updated scripts for tuning: You should revise cicada.config file so that decoder's output should be ${file} not directory=${directory}
Serious bugfix: grammar indexing with attributes
Added kbest filter for moses
Added reference format converter to/from moses/cdec/joshua (We do not support xml/sgml style refsets found in LDC)

2011-9-20
New: pialign derivation to hiero grammar/hypergraph conversion filter